<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TiqueteActivity">

    <TextView
        android:id="@+id/TiquetePos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/tiquete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgTiquete"
        android:layout_width="184dp"
        android:layout_height="111dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TiquetePos"
        app:srcCompat="@drawable/facura_pos" />

    <EditText
        android:id="@+id/numeroTiquete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/NúmeroTiquete"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTiquete" />

    <EditText
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeroTiquete" />

    <EditText
        android:id="@+id/placa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/placa"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecha" />

    <TextView
        android:id="@+id/mensualidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mensualidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placa" />

    <CheckBox
        android:id="@+id/cbactivo"
        android:layout_width="380dp"
        android:layout_height="30dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="  Activo"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensualidad" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="387dp"
        android:layout_height="34dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbactivo">


        <Button
            android:id="@+id/guardar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/anular"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/anular" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="34dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/limpiar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/limpiar" />

        <Button
            android:id="@+id/regresar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/regresar" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>